k8s/realtime/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: realtime-service-network-policy
  namespace: flet-montrg
spec:
  podSelector:
    matchLabels:
      app: realtime-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: flet-montrg
    ports:
    - protocol: TCP
      port: 8000
  - ports:
    - protocol: TCP
      port: 8000
  egress:
  # location-service, thresholds-service (HTTP client in app)
  - to:
    - namespaceSelector:
        matchLabels:
          name: flet-montrg
    ports:
    - protocol: TCP
      port: 80
  - to:
    - namespaceSelector:
        matchLabels:
          name: flet-montrg
    ports:
    - protocol: TCP
      port: 5432
  - to: []
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
